# comicdesk

./: .gitignore  LICENSE  README.md  comicdesk.desktop.in  comicdesk.sh  install-desktop.sh  pyproject.toml  requirements.txt
comicdesk/: __main__.py  appicon.py  archive.py  autotag.py  autotagdialog.py  background.py  config.py  dirtree.py  favorites.py  i18n.py  icons.py  index.py  indexdialog.py  mainwindow.py  matchdialog.py  metapanel.py  pageeditor.py  provenance.py  reader.py  readstate.py  series.py  seriescheck.py  seriesdialog.py  theme.py  thumbs.py  translate.py
comicdesk/providers/: anilist.py  base.py  cache.py  comicvine.py  gcd.py
docs/: index.html
