[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comicdesk"
version = "0.1.0"
description = "Ein Dateimanager nur fuer Comics: browsen, lesen, taggen, ordnen"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.6",
    "pymupdf>=1.23",
    "comictagger>=1.5.5",
    "send2trash>=1.8",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/aaaaaprvdgrwwelt/comicdesk"

[project.scripts]
comicdesk = "comicdesk.__main__:main"

[tool.setuptools.packages.find]
include = ["comicdesk*"]
